docker-images/10.3/websessions-cart-example/kubernetes-test.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: store-client
  name: store-client-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: store-client
    spec:
      containers:
      - image: daerepository03.eur.ad.sag:4443/terracotta/sample-tcstore-client:10.4.0-SNAPSHOT
        imagePullPolicy: Always #ensure the node will always try to pull from the registry
        name: store-client
      imagePullSecrets:
      - name: regcred
  selector:
    matchLabels:
      app: store-client

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: caching-client
  name: caching-client-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: caching-client
    spec:
      containers:
      - image: daerepository03.eur.ad.sag:4443/terracotta/sample-ehcache-client:10.4.0-SNAPSHOT
        imagePullPolicy: Always #ensure the node will always try to pull from the registry
        name: caching-client
      imagePullSecrets:
      - name: regcred
  selector:
    matchLabels:
      app: caching-client
---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sessions
  name: sessions
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: sessions
    spec:
      containers:
      - image:  daerepository03.eur.ad.sag:4443/terracotta/websessions-cart-example:10.4.0-SNAPSHOT
        imagePullPolicy: Always
        name: sessions
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /cart
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 3
      restartPolicy: Always
      imagePullSecrets:
      - name: regcred
  selector:
    matchLabels:
      app: sessions

---

apiVersion: v1
kind: Service
metadata:
  name: sessions
  labels:
    app: sessions
spec:
  ports:
  - name: sessions-port
    port: 8080
#  type: LoadBalancer
#  sessionAffinity: None
  #sessionAffinityConfig:
  #  clientIP:
  #    timeoutSeconds: 10 
  selector:
    app: sessions

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: tmc
  name: tmc
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: tmc
    spec:
      containers:
      - image: daerepository03.eur.ad.sag:4443/terracotta/tmc:10.4.0-SNAPSHOT
        imagePullPolicy: Always #ensure the node will always try to pull from the registry
        name: tmc
        ports:
        - containerPort: 9480
#        volumeMounts:
#        - name: tmcdata
#          mountPath: /data/tmc/
#      volumes:
#      - name: tmcdata
#        hostPath:
#          path: /home/docker/tmcdata
      restartPolicy: Always
      imagePullSecrets:
      - name: regcred
  selector:
    matchLabels:
      app: tmc
  serviceName: tmc-internal

---

apiVersion: v1
kind: Service
metadata:
  name: tmc
  labels:
    app: tmc
spec:
  ports:
  - name: tmc-port
    port: 9480
  type: LoadBalancer
  selector:
    app: tmc

---

apiVersion: v1
kind: Service
metadata:
  name: tmc-internal
  labels:
    app: tmc
spec:
  ports:
  - name: tmc-port
    port: 9480
  clusterIP: None
  selector:
    app: tmc

---

apiVersion: v1
kind: Service
metadata:
  name: terracotta
  labels:
    app: terracotta
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
spec:
  ports:
  - name: terracotta-port
    port: 9410
  - name: sync-port
    port: 9430
  clusterIP: None
  selector:
    app: terracotta

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: terracotta
  name: terracotta
spec:
  selector:
    matchLabels:
      app: terracotta
  serviceName: terracotta
  # replica set definition
  replicas: 1
  template:
    metadata:
      labels:
        app: terracotta
    spec:
      # pod definition
      containers:
      - name: terracotta
        image: daerepository03.eur.ad.sag:4443/terracotta/terracotta-server:10.4.0-SNAPSHOT
        imagePullPolicy: Always #ensure the node will always try to pull from the registry
        resources:
          requests:
            memory: 2Gi
        command: ["bin/start-tc-server.sh"]
        args: ["-f", "/configs/tc-config.xml", "-n", "$(POD_NAME)"]
        ports:
        - containerPort: 9410
          name: terracotta-port
        - containerPort: 9430
          name: sync-port
        volumeMounts:
#        - name: dataroots
#          mountPath: /data/dataroots
#        - name: backups
#          mountPath: /data/backups
        - name: config-volume
          mountPath: /configs
      volumes:
      - name: config-volume
        configMap:
          name: tc-config
#      - name: dataroots
#        hostPath:
#          path: /home/docker/dataroots
#      - name: backups
#        hostPath:
#          path: /home/docker/backups
      imagePullSecrets:
      - name: regcred
